--- a/ERPUpdater/ERPUpdater.csproj
+++ b/ERPUpdater/ERPUpdater.csproj
@@ -187,6 +187,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\Release\Template\ListFrm.ascx">
+      <SubType>ASPXCodeBehind</SubType>
+    </Content>
     <Content Include="bin\Release\Template\PageFrm.ascx">
       <SubType>ASPXCodeBehind</SubType>
     </Content>
